[package]
name = "mint-nft-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mint_nft_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
mpl-token-metadata = { version="1.8.0", features = [ "no-entrypoint" ] }
anchor-spl = "0.26.0"
spl-token = "3.3.0"